src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated service location</description>
        <inlineHelpText>ID of the associated service location</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Ship To)</relationshipLabel>
        <relationshipName>LineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StatusDetails__c</fullName>
        <description>Maintains information about what is pending</description>
        <inlineHelpText>Maintains information about what is pending</inlineHelpText>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_Config2__SummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SyncStatus__c</fullName>
        <description>The line synchronization status.</description>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Synchronized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TransferPriceLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line Item from collaborators cart from which transfer prices was received for this line item</description>
        <inlineHelpText>Line Item from collaborators cart from which transfer prices was received for this line item</inlineHelpText>
        <label>Transfer Price Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Line Items (Transfer Price Line Item)</relationshipLabel>
        <relationshipName>LineItemsTP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitCostAdjustment__c</fullName>
        <description>The unit adjustment for the product or service applied to the base cost</description>
        <inlineHelpText>The unit adjustment for the product or service applied to the base cost</inlineHelpText>
        <label>Unit Cost Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentAuto__c</fullName>
        <description>The automatic unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The automatic unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Auto)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentManual__c</fullName>
        <description>The manual unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The manual unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Manual)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_From_Previous__c</fullName>
        <description>CPQ-IQ-LC-14113 : Display a value to show if the line item has changed since the previously accepted and contracted order.</description>
        <inlineHelpText>The type of change for this item from the previous order: Added or Updated.</inlineHelpText>
        <label>Change From Previous</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Delivery_Frequency__c</fullName>
        <description>LC-10107: To show Data Delivery Frequency field detail on cart for AMESA</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.Data_Delivery_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Delivery Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>CPQ-IQ-LC-14264 : This field used to calculate the difference between extended price and net price.</description>
        <formula>Apttus_Config2__ExtendedPrice__c  -  Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_Year__c</fullName>
        <description>LC-8860 To store End date year on Cart line Item for Criteria</description>
        <formula>IF(ISBLANK(Apttus_Config2__EndDate__c), YEAR(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__ExpectedEndDate__c), YEAR(Apttus_Config2__EndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Make it required on Cart
	Use constraint rule to make validation – Gross Margin should not be less than 5</description>
        <label>Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile_Code_Tier__c</fullName>
        <formula>TEXT( Apttus_Config2__AttributeValueId__r.O_Mobile_Code_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Code Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Clone_Bundle__c</fullName>
        <description>Clone bundle</description>
        <formula>Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Clone bundle products</inlineHelpText>
        <label>CPQ-Del-Copy Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <description>CPQ-IQ-LC-12314: This is used to store pruchase(cost) price.</description>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Delivery_Country__c</fullName>
        <description>CPQ-IQ-LC-9824: To show country field detail on cart for AMESA and OCE</description>
        <formula>IF( ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Select_Pricing_Tool__c, &apos;AMESA&apos;) , CASE(Apttus_Config2__AttributeValueId__r.Eligible_Countries__c, 
&quot;SA&quot;, &quot;Saudi Arabia&quot;,
&quot;EG&quot;, &quot;Egypt&quot;,
&quot;KW&quot;, &quot;Kuwait&quot;,
&quot;AE&quot;, &quot;United Arab Emirates&quot;,
&quot;LB&quot;, &quot;Lebanon&quot;,
&quot;JO&quot;, &quot;Jordan&quot;,
&quot;BH&quot;, &quot;Bahrain&quot;,
&quot;MA&quot;,&quot;Morocco&quot;,
&quot;TN&quot;,&quot;Tunisia&quot;,
&quot;DZ&quot;,&quot;Algeria&quot;,
&quot;GA&quot;,&quot;Gabon&quot;,
&quot;CG&quot;,&quot;Congo&quot;,
&quot;GN&quot;,&quot;Guinea&quot;,
&quot;BJ&quot;,&quot;Benin&quot;,
&quot;TG&quot;,&quot;Togo&quot;,
&quot;ML&quot;,&quot;Mali&quot;,
&quot;BF&quot;,&quot;Burkina Faso&quot;,
&quot;NE&quot;,&quot;Niger&quot;,
&quot;CI&quot;,&quot;Côte d&apos;Ivoire&quot;,
&quot;CM&quot;,&quot;Cameroon&quot;,
&quot;SN&quot;,&quot;Senegal&quot;,
&quot;TD&quot;,&quot;Tchad&quot;,
&quot;FW&quot;,&quot;French West Africa&quot;,
&quot;ZA&quot;,&quot;South Africa&quot;, &quot;&quot;), TEXT(Apttus_Config2__AttributeValueId__r.O_Country__c))</formula>
        <label>Delivery Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Gross_Margin__c</fullName>
        <formula>IF(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Option&apos;), IF(Apttus_Config2__NetPrice__c &gt; 0, (Apttus_Config2__NetPrice__c -  O_Product_Cost__c) / Apttus_Config2__NetPrice__c, 0), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Is_Subscription_Fee__c</fullName>
        <formula>ISPICKVAL( Apttus_Config2__ChargeType__c, &apos;Subscription Fee&apos;) &amp;&amp; (Apttus_Config2__ProductId__r.Unit_Name__c = &apos;OCE Marketing&apos; || Apttus_Config2__ProductId__r.Unit_Name__c = &apos;OCE Sales&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Is Subscription Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_PerUserPerMonth__c</fullName>
        <description>OCE net price per user per month</description>
        <formula>IF(CONTAINS(Apttus_Config2__PriceListId__r.Name, &quot;OCE Price List&quot;), 
   IF(Apttus_Config2__OptionId__r.ProductCode = &apos;OCEP_AO_ADA&apos; &amp;&amp; Apttus_Config2__Quantity__c &gt; 5  &amp;&amp;   Apttus_Config2__SellingTerm__c &gt; 0, Apttus_Config2__NetPrice__c / (Apttus_Config2__Quantity__c - 5) / Apttus_Config2__SellingTerm__c / 12 , 
   IF(Apttus_Config2__Quantity__c &gt; 0 &amp;&amp; Apttus_Config2__SellingTerm__c &gt; 0, Apttus_Config2__NetPrice__c / Apttus_Config2__Quantity__c / Apttus_Config2__SellingTerm__c / 12, 0)) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Per User Per Month</inlineHelpText>
        <label>PUPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Product_Cost__c</fullName>
        <formula>IF(CONTAINS(Apttus_Config2__PriceListId__r.Name, &quot;OCE Price List&quot;),
   IF(Apttus_Config2__OptionId__r.ProductCode = &apos;OCEP_AO_CONCUR_INT&apos;, Apttus_Config2__Quantity__c * 2000,
   IF(Apttus_Config2__OptionId__r.ProductCode = &apos;OCEP_AO_RE_IAVM&apos;, Apttus_Config2__Quantity__c * 45,
   IF(Apttus_Config2__OptionId__r.ProductCode = &apos;OCEP_AO_ADA&apos; &amp;&amp; Apttus_Config2__Quantity__c &gt; 5, (Apttus_Config2__Quantity__c - 5) * 1440,  
   IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Subscription Fee&apos;), Apttus_Config2__ExtendedPrice__c * 0.35, 
   IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Add-on Price&apos;), Apttus_Config2__ExtendedPrice__c * 0.8,
   IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Implementation Fee&apos;), Apttus_Config2__ExtendedPrice__c / 2.5,
   IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Service Fee&apos;), Apttus_Config2__ExtendedPrice__c / 2.5, 0))))))), null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Total_Discount__c</fullName>
        <formula>IF(TEXT(Apttus_Config2__ChargeType__c) = &apos;Subscription Fee&apos;, 0  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ-Del-Total Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pass_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable only for License, Other Service and Miscellaneous categories.</description>
        <label>Pass Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Requisites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LC-12746: This field is used to store related quote requisites id based on study number</description>
        <label>Quote Requisites</label>
        <referenceTo>Quote_Requisites__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_ATC_OTC_Codes__c</fullName>
		<description>LC-9460 To Store Selected ATC OTC Hierarchy Codes for Market Share in Quote.</description>
        <inlineHelpText>Separated by Semicolon</inlineHelpText>
        <label>Selected ATC/OTC Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Pricing__c</fullName>
        <description>CPQ-IQ-LC-12675: Used to identify rate card account based pricing applied or not.</description>
        <label>Special Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Year__c</fullName>
        <description>LC-10600 To store Start date year on Cart line Item for Criteria</description>
        <formula>IF(ISBLANK( Apttus_Config2__StartDate__c ), YEAR(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__ExpectedStartDate__c), YEAR(Apttus_Config2__StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Information__c</fullName>
        <description>CPQ-IQ-LC-12669: To Store the hyperlink for related Study Information.</description>
        <formula>IF(  Apttus_Config2__OptionId__c == NULL,  HYPERLINK(&quot;/lightning/n/CPQ_Study_Information_Page?c__Id=&quot; +  TEXT(Apttus_Config2__AttributeValueId__r.Study_Number__c) + &quot;&amp;c__QuoteId=&quot; +   CASESAFEID(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.IQVIA_Quote__r.Id) , &quot;Related Study&quot;, &quot;_blank&quot;) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Number__c</fullName>
        <description>CPQ-LC-13370: This field is used to store the line item study number.</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.Study_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Price_Callback__c</fullName>
        <description>CPQ-IQ-LC-14398: Used to store system generated price.</description>
        <label>Base Price Callback</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <description>CPQ-IQ-LC-12501: This is used to store Unit of Measure.</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.Unit_Of_Measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Of Measure</label>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>Previous_Net_Price__c</fullName>
        <description>CPQ-LC-15623: Field to capture the Line Item Net Price from previous Accepted Quote.</description>
        <label>Previous Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Quantity__c</fullName>
        <description>CPQ-LC-15623: Field to capture the Line Item Quantity from previous Accepted Quote.</description>
        <label>Previous Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <displayFormat>LI-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CPQ_Validation_On_Start_and_End_Date</fullName>
        <active>true</active>
        <description>LC-11586 : End Date should be greater than Start Date.</description>
        <errorConditionFormula>Apttus_Config2__EndDate__c &lt; Apttus_Config2__StartDate__c</errorConditionFormula>
        <errorDisplayField>Apttus_Config2__EndDate__c</errorDisplayField>
        <errorMessage>End Date should be greater than Start Date.</errorMessage>
    </validationRules>
</CustomObject>